--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body div video {
     width: 100%;
     height: 5rem;
     border-radius: 50%;
-    border: 4.6px solid white;
+    border: 4px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +46,6 @@ body div video {
     height: 2.9rem;
     width: 2.9rem;
     border-radius: 50%;
-
 }
 
 .capture-btn {
@@ -90,13 +89,13 @@ body div video {
 
 .timer-cont {
     position: absolute;
-    bottom: 15.5rem;
+    bottom: 13.5rem;
     right: 3.1rem;
     color: lightgoldenrodyellow;
 }
 
 .timer {
-    /* display: none; */
+    display: none;
     z-index: 2;
 }
 
@@ -143,11 +142,12 @@ body div video {
 .login-cont{
     position: absolute;
     right: 4rem;
-    top: 1rem;
+    top: 2rem;
     width: 3.6rem;
     height: 3.6rem;
-    background: lightblue;
+    background: transparent;
     display: flex;
+    border: 2px solid white;
     justify-content: center;
     align-items: center;
     font-size: 30px;
@@ -157,7 +157,7 @@ body div video {
 .message{
     position: absolute;
     right: 2.6rem;
-    top: 5rem;
+    top: 6rem;
     color: white;
     font-size: 20px;
     padding: 0 4px;
@@ -168,6 +168,32 @@ body div video {
 }
 
 .link{
-    color: black;
+    color: white;
+}
+
+.gallery-cont{
+    position: absolute;
+    bottom: 5.5rem;
+    right: 3.9rem;
+    height: 4.2rem;
+    width: 4.2rem;
+    background: transparnt;
+    border: 2px solid white;
+    color: white;
+    padding: 2px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.gallery > span{
+    font-size: 45px;
+    color: white;
+}
+
+.gallery-cont:hover{
+    cursor: pointer;
 }
 
